--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -7,8 +7,11 @@
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "eslint-plugin-react": "7.31.7",
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
