--- a/apps/baily.io/package.json
+++ b/apps/baily.io/package.json
@@ -1,26 +1,49 @@
 {
-  "name": "web",
+  "name": "baily.io",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "TZ=EST jest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "ui": "workspace:*",
+    "zod": "3.19.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
+    "@playwright/test": "^1.27.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/cors": "^2.8.12",
+    "@types/jest": "^29.0.2",
+    "@types/react": "18.0.21",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "eslint": "7.32.0",
-    "next-transpile-modules": "9.0.0",
+    "eslint-config-custom": "workspace:*",
+    "next-transpile-modules": "^9.1.0",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
+    "jest-presets": "workspace:*",
     "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "18.0.17",
-    "typescript": "^4.5.3"
+    "tsx": "^3.9.0",
+    "typescript": "^4.8.3"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma",
+    "seed": "tsx prisma/seed.ts"
   }
 }
