--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/parser": "5.40.1",
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
