--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "generate"],
       "outputs": ["dist/**", ".next/**"]
     },
     "lint": {
@@ -10,6 +10,16 @@
     },
     "dev": {
       "cache": false
+    },
+    "test": {
+      "outputs": ["coverage/**"],
+      "dependsOn": []
+    },
+    "test:e2e": {
+      "outputs": [],
+      "dependsOn": []
     }
-  }
+  },
+  "globalDependencies": [],
+  "globalEnv": ["NODE_ENV", "NEXT_PUBLIC_VERCEL_URL", "CI"]
 }
