--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "prisma.prisma"
-  ]
+    "prisma.prisma",
+    "astro-build.astro-vscode"
+  ],
+  "unwantedRecommendations": []
 }
