--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,7 @@
   },
   "globalDependencies": [],
   "globalEnv": [
+    "npm_config_user_agent",
     "NODE_ENV",
     "NEXT_PUBLIC_VERCEL_URL",
     "CI",
